--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"/>
   </head>
   <body>
-    <div class="row">
+    <div class="row tables">
       <div
         class="col-12 card col-sm-7 text-center p-4 bg-warning shadow-lg"
         id="Tabla"
